--- a/The Annotated Transformer.ipynb
+++ b/The Annotated Transformer.ipynb
@@ -4,19 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"aiayn.png\">"
+    "![/images/](images/aiayn.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> When teaching, I emphasize implementation as a way to understand recent developments in ML. This post is an attempt to keep myself honest along this goal. The recent [\"Attention is All You Need\"]\n",
-    "(https://arxiv.org/abs/1706.03762) paper from NIPS 2017 has been instantly impactful paper as a new method for machine translation and potentiall NLP generally. The paper is very clearly written, but the conventional wisdom has been that it is quite difficult to implement correctly. \n",
+    "> When teaching, I emphasize implementation as a way to understand recent developments in ML. This post is an attempt to keep myself honest along this goal. The recent [\"Attention is All You Need\"](https://arxiv.org/abs/1706.03762) Transfomer paper from NIPS 2017 has been instantly impactful paper as a new method for machine translation and potentiall NLP generally. The paper is very clearly written, but the conventional wisdom has been that it is quite difficult to implement correctly. \n",
     ">\n",
     "> In this post I follow the paper through from start to finish and try to implement each component in code. \n",
-    "(I have done some minor reordering and skipping from the original paper). This document itself is a working notebook, and should be a completely usable and efficient implementation. To follow along you will first need to install [PyTorch](http://pytorch.org/) and [torchtext](https://github.com/pytorch/text). The complete code is available on [github](https://github.com/harvardnlp/annotated-transformer).\n",
-    ">- Alexander \"Sasha\" Rush ([@harvardnlp](https://twitter.com/harvardnlp))\n"
+    "(I have done some minor reordering and skipping from the original paper). This document itself is a working notebook, and should be a completely usable and efficient implementation. To follow along you will first need to install [PyTorch](http://pytorch.org/) and [torchtext](https://github.com/pytorch/text). The complete notebook is available on [github](https://github.com/harvardnlp/annotated-transformer).\n",
+    ">- Alexander Rush ([@harvardnlp](https://twitter.com/harvardnlp))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 366,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# !pip install http://download.pytorch.org/whl/cu80/torch-0.3.0.post4-cp36-cp36m-linux_x86_64.whl numpy matplotlib spacy torchtext "
    ]
   },
   {
@@ -125,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"ModalNet-21.png\" width=400px>"
+    "![](images/ModalNet-21.png)"
    ]
   },
   {
@@ -352,24 +362,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2ba5323ed320>"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAT8AAAEyCAYAAACMONd1AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEjZJREFUeJzt3X/sXXV9x/HnaxX+GJKhpSKUdmDSkKBRJN90xqHB+as0\nhKoxro2ZqCQVo0aTLQZn4vxzzugSh7GpkyALA7YoSmYRwZigiSiFlFIEpBIMLZUqZiDixorv/fE9\nTW6/3Nvvt/fc+/1+y+f5SG6+53w+n3POu+fevDjn/viQqkKSWvMnS12AJC0Fw09Skww/SU0y/CQ1\nyfCT1CTDT1KTDD9JTTL8JDXJ8JPUpBctdQHDnPrSFXXWmhOOebuf7/7TKVQj6XjxP/yeZ+t/s5Cx\nyzL8zlpzAj+9Zc0xb/f2M86bQjWSjhc/qe8veKy3vZKa1Cv8kmxI8mCSvUmuGNKfJF/q+ncnOb/P\n8SRpUsYOvyQrgC8DFwHnAluSnDtn2EXAuu6xFfjKuMeTpEnqc+W3HthbVQ9X1bPA9cCmOWM2AdfU\nrDuAU5Kc3uOYkjQRfcJvNfDowPq+ru1Yx0jSols2H3gk2ZpkZ5Kdv37iuaUuR9ILXJ/w2w8Mfh/l\nzK7tWMcAUFXbq2qmqmZWrVzRoyxJml+f8LsTWJfk7CQnApuBm+aMuQl4X/ep7+uAJ6vqQI9jStJE\njP0l56o6lOSjwC3ACuCqqrovyeVd/zZgB7AR2As8A3ygf8mS1F+vX3hU1Q5mA26wbdvAcgEf6XMM\nSZqGZfOBhyQtJsNPUpOW5cQG47rlsV3HvI2TIUht8spPUpMMP0lNMvwkNcnwk9Qkw09Skww/SU0y\n/CQ1yfCT1CTDT1KTDD9JTTL8JDXJ8JPUpBfUxAbjGGcyBHBCBOl455WfpCYZfpKaZPhJapLhJ6lJ\nhp+kJhl+kppk+ElqkuEnqUmGn6QmjR1+SdYk+UGSnyW5L8nHh4y5MMmTSXZ1j8/0K1eSJqPPz9sO\nAX9bVXcnORm4K8mtVfWzOeN+WFUX9ziOJE3c2Fd+VXWgqu7uln8H3A+snlRhkjRNE3nPL8lZwGuB\nnwzpfn2S3UluTvLKSRxPkvrqPatLkhcD3wA+UVVPzem+G1hbVU8n2Qh8C1g3Yj9bga0Aa1cv/8lm\nxpkNxplgpOWj15VfkhOYDb5rq+qbc/ur6qmqerpb3gGckOTUYfuqqu1VNVNVM6tWruhTliTNq8+n\nvQG+BtxfVV8cMebl3TiSrO+O98S4x5SkSelzf/mXwN8A9yY5fA/498BagKraBrwb+HCSQ8AfgM1V\nVT2OKUkTMXb4VdWPgMwz5krgynGPIUnT4i88JDXJ8JPUJMNPUpMMP0lNMvwkNcnwk9Qkw09Skww/\nSU1a/jMIvICMMxkCOCGCNA1e+UlqkuEnqUmGn6QmGX6SmmT4SWqS4SepSYafpCYZfpKaZPhJapLh\nJ6lJhp+kJhl+kppk+ElqkrO6HAecDUaaPK/8JDXJ8JPUpF7hl+SRJPcm2ZVk55D+JPlSkr1Jdic5\nv8/xJGlSJvGe35uq6jcj+i4C1nWPvwC+0v2VpCU17dveTcA1NesO4JQkp0/5mJI0r77hV8BtSe5K\nsnVI/2rg0YH1fV2bJC2pvre9F1TV/iQvA25N8kBV3T7Ojrrw3AqwdrXfwJE0Xb2u/Kpqf/f3IHAj\nsH7OkP3AmoH1M7u2YfvaXlUzVTWzauWKPmVJ0rzGDr8kJyU5+fAy8DZgz5xhNwHv6z71fR3wZFUd\nGLtaSZqQPveXpwE3Jjm8n3+vqu8muRygqrYBO4CNwF7gGeAD/cqVpMkYO/yq6mHgNUPatw0sF/CR\ncY8hSdPiLzwkNcnwk9Qkv1PyAjbObDDOBKNWeOUnqUmGn6QmGX6SmmT4SWqS4SepSYafpCYZfpKa\nZPhJapLhJ6lJhp+kJhl+kppk+ElqkhMb6AjjTIYAToig449XfpKaZPhJapLhJ6lJhp+kJhl+kppk\n+ElqkuEnqUmGn6QmGX6SmjR2+CU5J8mugcdTST4xZ8yFSZ4cGPOZ/iVLUn9j/7ytqh4EzgNIsgLY\nD9w4ZOgPq+ricY8jSdMwqdveNwO/qKpfTmh/kjRVkwq/zcB1I/pen2R3kpuTvHJCx5OkXnrP6pLk\nROAS4FNDuu8G1lbV00k2At8C1o3Yz1ZgK8Da1U42c7wZZzYYZ4LRUprEld9FwN1V9fjcjqp6qqqe\n7pZ3ACckOXXYTqpqe1XNVNXMqpUrJlCWJI02ifDbwohb3iQvT5JueX13vCcmcExJ6qXX/WWSk4C3\nAh8aaLscoKq2Ae8GPpzkEPAHYHNVVZ9jStIk9Aq/qvo9sHJO27aB5SuBK/scQ5KmwV94SGqS4Sep\nSYafpCYZfpKaZPhJapLhJ6lJhp+kJhl+kprkDAJaMuNMhgBOiKDJ8MpPUpMMP0lNMvwkNcnwk9Qk\nw09Skww/SU0y/CQ1yfCT1CTDT1KTDD9JTTL8JDXJ8JPUJMNPUpOc1UXHHWeD0SR45SepSYafpCbN\nG35JrkpyMMmegbaXJrk1yUPd35eM2HZDkgeT7E1yxSQLl6Q+FnLldzWwYU7bFcD3q2od8P1u/QhJ\nVgBfBi4CzgW2JDm3V7WSNCHzhl9V3Q78dk7zJuDr3fLXgXcM2XQ9sLeqHq6qZ4Hru+0kacmN+57f\naVV1oFv+FXDakDGrgUcH1vd1bZK05Hp/4FFVBVTf/STZmmRnkp2/fuK5vruTpKMaN/weT3I6QPf3\n4JAx+4E1A+tndm1DVdX2qpqpqplVK1eMWZYkLcy44XcTcGm3fCnw7SFj7gTWJTk7yYnA5m47SVpy\nC/mqy3XAj4FzkuxLchnwj8BbkzwEvKVbJ8kZSXYAVNUh4KPALcD9wH9U1X3T+WdI0rGZ9+dtVbVl\nRNebh4x9DNg4sL4D2DF2dZI0Jf7CQ1KTDD9JTXJWFzVjnNlgnAnmhcsrP0lNMvwkNcnwk9Qkw09S\nkww/SU0y/CQ1yfCT1CTDT1KTDD9JTTL8JDXJ8JPUJMNPUpOc2EA6inEmQwAnRDgeeOUnqUmGn6Qm\nGX6SmmT4SWqS4SepSYafpCYZfpKaZPhJapLhJ6lJ84ZfkquSHEyyZ6Dt80keSLI7yY1JThmx7SNJ\n7k2yK8nOSRYuSX0s5MrvamDDnLZbgVdV1auBnwOfOsr2b6qq86pqZrwSJWny5g2/qrod+O2ctu9V\n1aFu9Q7gzCnUJklTM4n3/D4I3Dyir4DbktyVZOsEjiVJE9FrVpcknwYOAdeOGHJBVe1P8jLg1iQP\ndFeSw/a1FdgKsHa1k83o+DbObDDOBLO4xr7yS/J+4GLgvVVVw8ZU1f7u70HgRmD9qP1V1faqmqmq\nmVUrV4xbliQtyFjhl2QD8Engkqp6ZsSYk5KcfHgZeBuwZ9hYSVpsC/mqy3XAj4FzkuxLchlwJXAy\ns7eyu5Js68aekWRHt+lpwI+S3AP8FPhOVX13Kv8KSTpG8765VlVbhjR/bcTYx4CN3fLDwGt6VSdJ\nU+IvPCQ1yfCT1CTDT1KTDD9JTTL8JDXJ8JPUJMNPUpMMP0lNcgYBaZkYZzIEcEKEcXnlJ6lJhp+k\nJhl+kppk+ElqkuEnqUmGn6QmGX6SmmT4SWqS4SepSYafpCYZfpKaZPhJapLhJ6lJzuoiHeecDWY8\nXvlJapLhJ6lJ84ZfkquSHEyyZ6Dts0n2J9nVPTaO2HZDkgeT7E1yxSQLl6Q+FnLldzWwYUj7P1fV\ned1jx9zOJCuALwMXAecCW5Kc26dYSZqUecOvqm4HfjvGvtcDe6vq4ap6Frge2DTGfiRp4vq85/ex\nJLu72+KXDOlfDTw6sL6va5OkJTdu+H0FeAVwHnAA+ELfQpJsTbIzyc5fP/Fc391J0lGNFX5V9XhV\nPVdVfwS+yuwt7lz7gTUD62d2baP2ub2qZqpqZtXKFeOUJUkLNlb4JTl9YPWdwJ4hw+4E1iU5O8mJ\nwGbgpnGOJ0mTNu8vPJJcB1wInJpkH/APwIVJzgMKeAT4UDf2DOBfq2pjVR1K8lHgFmAFcFVV3TeV\nf4UkHaN5w6+qtgxp/tqIsY8BGwfWdwDP+xqMJC01f+EhqUmGn6QmOauL1KhxZoN5Ic0E45WfpCYZ\nfpKaZPhJapLhJ6lJhp+kJhl+kppk+ElqkuEnqUmGn6QmGX6SmmT4SWqS4SepSU5sIGnBxpkMAZbn\nhAhe+UlqkuEnqUmGn6QmGX6SmmT4SWqS4SepSYafpCYZfpKaZPhJatK8v/BIchVwMXCwql7Vtd0A\nnNMNOQX476p63le4kzwC/A54DjhUVTMTqluSelnIz9uuBq4ErjncUFV/fXg5yReAJ4+y/Zuq6jfj\nFihJ0zBv+FXV7UnOGtaXJMB7gL+abFmSNF193/N7A/B4VT00or+A25LclWRrz2NJ0sT0ndVlC3Dd\nUfovqKr9SV4G3Jrkgaq6fdjALhy3Aqxd7WQz0gvJOLPBTHsmmLGv/JK8CHgXcMOoMVW1v/t7ELgR\nWH+UsduraqaqZlatXDFuWZK0IH1ue98CPFBV+4Z1JjkpycmHl4G3AXt6HE+SJmbe8EtyHfBj4Jwk\n+5Jc1nVtZs4tb5IzkuzoVk8DfpTkHuCnwHeq6ruTK12SxreQT3u3jGh//5C2x4CN3fLDwGt61idJ\nU+EvPCQ1yfCT1CTDT1KTDD9JTTL8JDXJ8JPUJMNPUpMMP0lNcgYBScvSOJMhrH/7Mwse65WfpCYZ\nfpKaZPhJapLhJ6lJhp+kJhl+kppk+ElqkuEnqUmGn6QmGX6SmmT4SWqS4SepSYafpCalqpa6hudJ\n8mvgl0O6TgV+s8jlDGMdR7KOI1nHkRazjj+vqlULGbgsw2+UJDurasY6rMM6rKMvb3slNcnwk9Sk\n4y38ti91AR3rOJJ1HMk6jrRc6jjCcfWenyRNyvF25SdJE2H4SWrSsgy/JBuSPJhkb5IrhvQnyZe6\n/t1Jzp9CDWuS/CDJz5Lcl+TjQ8ZcmOTJJLu6x2cmXUd3nEeS3NsdY+eQ/sU4H+cM/Dt3JXkqySfm\njJnK+UhyVZKDSfYMtL00ya1JHur+vmTEtkd9LU2gjs8neaA77zcmOWXEtkd9DidQx2eT7B849xtH\nbDvt83HDQA2PJBn6v2Cb5PkYW1UtqwewAvgF8ArgROAe4Nw5YzYCNwMBXgf8ZAp1nA6c3y2fDPx8\nSB0XAv+1COfkEeDUo/RP/XwMeY5+xewXSqd+PoA3AucDewba/gm4olu+AvjcOK+lCdTxNuBF3fLn\nhtWxkOdwAnV8Fvi7BTxvUz0fc/q/AHxm2udj3MdyvPJbD+ytqoer6lngemDTnDGbgGtq1h3AKUlO\nn2QRVXWgqu7uln8H3A+snuQxJmjq52OONwO/qKphv8KZuKq6HfjtnOZNwNe75a8D7xiy6UJeS73q\nqKrvVdWhbvUO4Mxx99+njgWa+vk4LEmA9wDXjbv/aVuO4bcaeHRgfR/PD52FjJmYJGcBrwV+MqT7\n9d0tz81JXjmlEgq4LcldSbYO6V/U8wFsZvSLejHOB8BpVXWgW/4VcNqQMYt9Xj7I7BX4MPM9h5Pw\nse7cXzXibYDFPB9vAB6vqodG9C/G+Tiq5Rh+y0qSFwPfAD5RVU/N6b4bWFtVrwb+BfjWlMq4oKrO\nAy4CPpLkjVM6zrySnAhcAvznkO7FOh9HqNn7qCX9zlaSTwOHgGtHDJn2c/gVZm9nzwMOMHvLuZS2\ncPSrviV/TS/H8NsPrBlYP7NrO9YxvSU5gdngu7aqvjm3v6qeqqqnu+UdwAlJTp10HVW1v/t7ELiR\n2duXQYtyPjoXAXdX1eND6lyU89F5/PCtfff34JAxi/U6eT9wMfDeLoifZwHPYS9V9XhVPVdVfwS+\nOmL/i3U+XgS8C7hh1Jhpn4+FWI7hdyewLsnZ3VXGZuCmOWNuAt7Xfcr5OuDJgVugiejes/gacH9V\nfXHEmJd340iyntnz+cSE6zgpycmHl5l9g33PnGFTPx8DRv4XfTHOx4CbgEu75UuBbw8Zs5DXUi9J\nNgCfBC6pqmdGjFnIc9i3jsH3eN85Yv9TPx+dtwAPVNW+YZ2LcT4WZCk/bRn1YPbTy58z+8nUp7u2\ny4HLu+UAX+767wVmplDDBczeSu0GdnWPjXPq+ChwH7Ofmt0BvH4Kdbyi2/893bGW5Hx0xzmJ2TD7\ns4G2qZ8PZsP2APB/zL5PdRmwEvg+8BBwG/DSbuwZwI6jvZYmXMdeZt9HO/wa2Ta3jlHP4YTr+Lfu\nud/NbKCdvhTno2u/+vBrYmDs1M7HuA9/3iapScvxtleSps7wk9Qkw09Skww/SU0y/CQ1yfCT1CTD\nT1KT/h8Lhr1O/TBL2gAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x2ba53c5b6f28>"
+       "<matplotlib.figure.Figure at 0x2ba5a4240748>"
       ]
      },
      "metadata": {},
@@ -380,23 +380,22 @@
     "# The attention mask shows the position each tgt word (row) is allowed to look at (column).\n",
     "# Words are blocked for attending to future words during training. \n",
     "plt.figure(figsize=(5,5))\n",
-    "plt.imshow(subsequent_mask(20)[0])"
+    "plt.imshow(subsequent_mask(20)[0])\n",
+    "None"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Attention:                                                                                                                                                                                                                                                                               \n",
-    "An attention function can be described as mapping a query and a set of key-value pairs to an output, where the query, keys, values, and output are all vectors.  The output is computed as a weighted sum of the values, where the weight assigned to each value is computed by a compatibility function of the query with the corresponding key.                                                                                                                                                                                                                                                                                           \n",
+    "An attention function can be described as mapping a query and a set of key-value pairs to an output, where the query, keys, values, and output are all vectors.  The output is computed as a weighted sum of the values, where the weight assigned to each value is computed by a compatibility function of the query with the corresponding key.                                                                                                                                                                                                                                                                                   \n",
     "\n",
-    "We call our particular attention \"Scaled Dot-Product Attention\".   The input consists of queries and keys of dimension $d_k$, and values of dimension $d_v$.  We compute the dot products of the query with all keys, divide each by $\\sqrt{d_k}$, and apply a softmax function to obtain the weights on the values.                                                                                                         \n",
-    "<img width=\"220px\" src=\"ModalNet-19.png\">\n",
+    "We call our particular attention \"Scaled Dot-Product Attention\".   The input consists of queries and keys of dimension $d_k$, and values of dimension $d_v$.  We compute the dot products of the query with all keys, divide each by $\\sqrt{d_k}$, and apply a softmax function to obtain the weights on the values.                             \n",
+    "\n",
+    "\n",
+    "![a](images/ModalNet-19.png)\n",
+    "\n",
     "\n",
     "In practice, we compute the attention function on a set of queries simultaneously, packed together into a matrix $Q$.   The keys and values are also packed together into matrices $K$ and $V$.  We compute the matrix of outputs as:                      \n",
     "                                                                 \n",
@@ -453,7 +452,7 @@
     "Instead of performing a single attention function with $d_{\\text{model}}$-dimensional keys, values and queries, we found it beneficial to linearly project the queries, keys and values $h$ times with different, learned linear projections to $d_k$, $d_k$ and $d_v$ dimensions, respectively.                                                                                                                                                                                                   \n",
     "On each of these projected versions of queries, keys and values we then perform the attention function in parallel, yielding $d_v$-dimensional output values. These are concatenated and once again projected, resulting in the final values:\n",
     "\n",
-    "<img width=\"270px\" src=\"ModalNet-20.png\">\n",
+    "![](images/ModalNet-20.png)\n",
     "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          \n",
     "Multi-head attention allows the model to jointly attend to information from different representation subspaces at different positions. With a single attention head, averaging inhibits this.                                                                                                                                                                                                                                                                                             \n",
     "    \n",
@@ -593,10 +592,9 @@
     "Since our model contains no recurrence and no convolution, in order for the model to make use of the order of the sequence, we must inject some information about the relative or absolute position of the tokens in the sequence.  To this end, we add \"positional encodings\" to the input embeddings at the bottoms of the encoder and decoder stacks.  The positional encodings have the same dimension $d_{\\text{model}}$ as the embeddings, so that the two can be summed.   There are many choices of positional encodings, learned and fixed [(cite)](https://arxiv.org/pdf/1705.03122.pdf). \n",
     "\n",
     "In this work, we use sine and cosine functions of different frequencies:                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  \n",
-    "$$                                                                                                                                                                                                                                                                                                                                                                                                                                                                            \n",
-    "    PE_{(pos,2i)} = sin(pos / 10000^{2i/d_{\\text{model}}}) \\\\                                                                                                                                                                                                                                                                                                                                                                                                                                      \n",
-    "    PE_{(pos,2i+1)} = cos(pos / 10000^{2i/d_{\\text{model}}})                                                                                                                                                                                                                                                                                                                                                                                                                                       \n",
-    "$$                                                                                                                                                                                                                                                        \n",
+    "$$PE_{(pos,2i)} = sin(pos / 10000^{2i/d_{\\text{model}}})$$\n",
+    "\n",
+    "$$PE_{(pos,2i+1)} = cos(pos / 10000^{2i/d_{\\text{model}}})$$                                                                                                                                                                                                                                                        \n",
     "where $pos$ is the position and $i$ is the dimension.  That is, each dimension of the positional encoding corresponds to a sinusoid.  The wavelengths form a geometric progression from $2\\pi$ to $10000 \\cdot 2\\pi$.  We chose this function because we hypothesized it would allow the model to easily learn to attend by relative positions, since for any fixed offset $k$, $PE_{pos+k}$ can be represented as a linear function of $PE_{pos}$. \n",
     "\n",
     "In addition, we apply dropout to the sums of the embeddings and the positional encodings in both the encoder and decoder stacks.  For the base model, we use a rate of $P_{drop}=0.1$. \n",
