--- a/The Annotated Transformer.ipynb
+++ b/The Annotated Transformer.ipynb
@@ -26,15 +26,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Transformer from [\"Attention is All You Need\"](https://arxiv.org/abs/1706.03762) has been instantly impactful in deep learning. Besides producing major improvements in translation quality, it provides a new architecture for many other NLP tasks. The paper itself is very clearly written, but the conventional wisdom has been that it is quite difficult to implement correctly. \n",
+    "The Transformer from [\"Attention is All You Need\"](https://arxiv.org/abs/1706.03762) has been on a lot of people's minds over the last year. Besides producing major improvements in translation quality, it provides a new architecture for many other NLP tasks. The paper itself is very clearly written, but the conventional wisdom has been that it is quite difficult to implement correctly. \n",
     "\n",
     "In this post I present an \"annotated\" version of the paper in the form of a line-by-line implementation. I have reordered and deleted some sections from the original paper and added comments throughout. This document itself is a working notebook, and should be a completely usable implementation. In total there are 400 lines of library code which can process 27,000 tokens per second on 4 GPUs. \n",
     "\n",
     "To follow along you will first need to install [PyTorch](http://pytorch.org/). The complete notebook is also available on [github](https://github.com/harvardnlp/annotated-transformer) or on Google [Colab](https://drive.google.com/file/d/1xQXSv6mtAOLXxEMi8RvaW8TW-7bvYBDF/view?usp=sharing). \n",
     "\n",
-    "Note this is merely a starting point for researchers and interested developers. The code here is based heavily on our [OpenNMT](http://opennmt.net) packages (pytorch or tensorflow). For other full-sevice implementations of the model check-out [Tensor2Tensor](https://github.com/tensorflow/tensor2tensor) (tensorflow) and [Sockeye](https://github.com/awslabs/sockeye) (mxnet).\n",
+    "Note this is merely a starting point for researchers and interested developers. The code here is based heavily on our [OpenNMT](http://opennmt.net) packages. (If helpful feel free to [cite](#conclusion).) For other full-sevice implementations of the model check-out [Tensor2Tensor](https://github.com/tensorflow/tensor2tensor) (tensorflow) and [Sockeye](https://github.com/awslabs/sockeye) (mxnet).\n",
     "\n",
-    "- Alexander Rush ([@harvardnlp](https://twitter.com/harvardnlp) or srush@seas.harvard.edu\n"
+    "- Alexander Rush ([@harvardnlp](https://twitter.com/harvardnlp) or srush@seas.harvard.edu)\n"
    ]
   },
   {
@@ -80,6 +80,8 @@
    "metadata": {},
    "source": [
     "Table of Contents\n",
+    "\n",
+    "\n",
     "* Table of Contents                               \n",
     "{:toc}      "
    ]
@@ -1623,6 +1625,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#!wget https://s3.amazonaws.com/opennmt-models/iwslt.pt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
    "metadata": {
     "collapsed": true
@@ -1818,6 +1831,17 @@
     "> The code we have written here is a version of the base model. There are fully trained version of this system available here  [(Example Models)](http://opennmt.net/Models-py/).\n",
     ">\n",
     "> With the addtional extensions in the last section, the OpenNMT-py replication gets to 26.9 on EN-DE WMT. Here I have loaded in those parameters to our reimplemenation. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!wget https://s3.amazonaws.com/opennmt-models/en-de-model.pt"
    ]
   },
   {
@@ -2074,9 +2098,7 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    "> Hopefully this code is useful to you. Please reach out if you have any issues. \n",
-    ">\n",
-    "> If you find this code helpful, it is based heavily on the OpenNMT codebase. So feel free to cite :)\n",
+    "> Hopefully this code is useful for future research. Please reach out if you have any issues. If you find this code helpful, also check out our other OpenNMT tools.\n",
     "\n",
     "```\n",
     "@inproceedings{opennmt,\n",
@@ -2104,26 +2126,25 @@
     "{::options parse_block_html=\"true\" /}\n",
     "<div id=\"disqus_thread\"></div>\n",
     "<script>\n",
-    "    /**\n",
-    "     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.\n",
-    "     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables\n",
-    "     */\n",
-    "    /*\n",
-    "    var disqus_config = function () {\n",
-    "        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable\n",
-    "        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable\n",
-    "    };\n",
-    "    */\n",
-    "    (function() {  // REQUIRED CONFIGURATION VARIABLE: EDIT THE SHORTNAME BELOW\n",
-    "        var d = document, s = d.createElement('script');\n",
-    "        \n",
-    "        s.src = 'https://EXAMPLE.disqus.com/embed.js';  \n",
-    "        \n",
-    "        s.setAttribute('data-timestamp', +new Date());\n",
-    "        (d.head || d.body).appendChild(s);\n",
-    "    })();\n",
+    "\n",
+    "/**\n",
+    "*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.\n",
+    "*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/\n",
+    "/*\n",
+    "var disqus_config = function () {\n",
+    "this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable\n",
+    "this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable\n",
+    "};\n",
+    "*/\n",
+    "(function() { // DON'T EDIT BELOW THIS LINE\n",
+    "var d = document, s = d.createElement('script');\n",
+    "s.src = 'https://harvard-nlp.disqus.com/embed.js';\n",
+    "s.setAttribute('data-timestamp', +new Date());\n",
+    "(d.head || d.body).appendChild(s);\n",
+    "})();\n",
     "</script>\n",
-    "<noscript>Please enable JavaScript to view the <a href=\"https://disqus.com/?ref_noscript\" rel=\"nofollow\">comments powered by Disqus.</a></noscript>"
+    "<noscript>Please enable JavaScript to view the <a href=\"https://disqus.com/?ref_noscript\">comments powered by Disqus.</a></noscript>\n",
+    "                            "
    ]
   },
   {
