--- a/The Annotated Transformer.ipynb
+++ b/The Annotated Transformer.ipynb
@@ -54,6 +54,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide": true
    },
    "outputs": [],
@@ -65,6 +66,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": true,
     "hide": true
    },
    "outputs": [],
@@ -141,7 +143,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class EncoderDecoder(nn.Module):\n",
@@ -175,7 +179,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Generator(nn.Module):\n",
@@ -236,7 +242,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def clones(module, N):\n",
@@ -248,7 +256,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Encoder(nn.Module):\n",
@@ -275,7 +285,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class LayerNorm(nn.Module):\n",
@@ -305,7 +317,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class SublayerConnection(nn.Module):\n",
@@ -333,7 +347,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class EncoderLayer(nn.Module):\n",
@@ -366,7 +382,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Decoder(nn.Module):\n",
@@ -392,7 +410,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class DecoderLayer(nn.Module):\n",
@@ -429,7 +449,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def subsequent_mask(size):\n",
@@ -443,7 +465,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "hide": true
+    "hide": true,
+    "hide_output": true
    },
    "source": [
     "> Below the attention mask shows the position each tgt word (row) is allowed to look at (column). Words are blocked for attending to future words during training."
@@ -453,6 +476,7 @@
    "cell_type": "code",
    "execution_count": 78,
    "metadata": {
+    "collapsed": true,
     "hide": true,
     "hide_output": true
    },
@@ -516,7 +540,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def attention(query, key, value, mask=None, dropout=None):\n",
@@ -591,7 +617,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class MultiHeadedAttention(nn.Module):\n",
@@ -659,7 +687,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class PositionwiseFeedForward(nn.Module):\n",
@@ -685,7 +715,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Embeddings(nn.Module):\n",
@@ -717,7 +749,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class PositionalEncoding(nn.Module):\n",
@@ -783,7 +817,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hide": true,
+    "hide_output": true
+   },
    "source": [
     "## Full Model\n",
     "\n",
@@ -793,7 +830,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def make_model(src_vocab, tgt_vocab, N=6,\n",
@@ -823,6 +862,7 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
+    "collapsed": true,
     "hide": true
    },
    "outputs": [],
@@ -843,7 +883,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hide": true,
+    "hide_output": true
+   },
    "source": [
     "> We stop for a quick interlude to introduce some of the tools \n",
     "needed to train a standard encoder decoder model. First we define a batch object that holds the src and target sentences for training, as well as constructing the masks. "
@@ -859,7 +902,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Batch:\n",
@@ -885,7 +930,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hide": true,
+    "hide_output": true
+   },
    "source": [
     "> Next we create a generic training and scoring function to keep track of loss. We pass in a generic loss compute function that also handles parameter updates. "
    ]
@@ -900,7 +948,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def run_epoch(data_iter, model, loss_compute):\n",
@@ -939,7 +989,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hide": true,
+    "hide_output": true
+   },
    "source": [
     "> We will use torch text for batching. This is discussed in more detail below. Here we create batches in a torchtext function that ensures our batch size padded to the maximum batchsize does not surpass a threshold (25000 if we have 8 gpus)."
    ]
@@ -947,7 +1000,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "global max_src_in_batch, max_tgt_in_batch\n",
@@ -988,7 +1043,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hide": true,
+    "hide_output": true
+   },
    "source": [
     "> Note: This part is very important. Need to train with this setup of the model. "
    ]
@@ -996,7 +1054,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -1084,7 +1144,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hide": true,
+    "hide_output": true
+   },
    "source": [
     "> We implement label smoothing using the KL div loss. Instead of using a one-hot target distribution, we create a distribution that has `confidence` of the correct word and the rest of the `smoothing` mass distributed throughout the vocabulary."
    ]
@@ -1092,7 +1155,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class LabelSmoothing(nn.Module):\n",
@@ -1124,7 +1189,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hide": true,
+    "hide_output": true
+   },
    "source": [
     "> Here we can see an example of how the mass is distributed to the words based on confidence. "
    ]
@@ -1162,7 +1230,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hide": true,
+    "hide_output": true
+   },
    "source": [
     "> Label smoothing actually starts to penalize the model if it gets very confident about a given choice. "
    ]
@@ -1220,6 +1291,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide": true
    },
    "outputs": [],
@@ -1250,7 +1322,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class SimpleLossCompute:\n",
@@ -1285,6 +1359,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide": true,
     "hide_output": true
    },
@@ -1315,7 +1390,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hide": true,
+    "hide_output": true
+   },
    "source": [
     "> This code predicts a translation using greedy decoding for simplicity. "
    ]
@@ -1323,7 +1401,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def greedy_decode(model, src, src_mask,\n",
@@ -1351,6 +1431,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide": true
    },
    "outputs": [],
@@ -1378,6 +1459,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide": true
    },
    "outputs": [],
@@ -1401,6 +1483,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide": true
    },
    "outputs": [],
@@ -1461,6 +1544,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide": true
    },
    "outputs": [],
@@ -1514,6 +1598,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide": true
    },
    "outputs": [],
@@ -1602,6 +1687,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide": true
    },
    "outputs": [],
@@ -1659,6 +1745,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide": true
    },
    "outputs": [],
@@ -1670,6 +1757,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide": true
    },
    "outputs": [],
@@ -1713,6 +1801,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide": true
    },
    "outputs": [],
@@ -1791,6 +1880,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide": true
    },
    "outputs": [],
@@ -1824,6 +1914,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide": true
    },
    "outputs": [],
@@ -1860,6 +1951,7 @@
    "cell_type": "code",
    "execution_count": 64,
    "metadata": {
+    "collapsed": true,
     "hide": true,
     "hide_output": true
    },
@@ -1883,6 +1975,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide": true
    },
    "outputs": [],
@@ -1894,6 +1987,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hide": true
    },
    "outputs": [],
@@ -1904,7 +1998,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.eval()\n",
@@ -1932,14 +2028,25 @@
    "metadata": {},
    "source": [
     "## Attention Visualization\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hide": true,
+    "hide_output": true
+   },
+   "source": [
     "> Even with a greedy decoder the translation looks pretty good. We can further visualize it to see what is happening at each layer of the attention "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tgt_sent = trans.split()\n",
